# learning-nav-irl

./: CMakeLists.txt  LICENSE  README.md  global_planner_link.xml  package.xml
cfg/: config.rviz
include/learning-nav-irl/: global_planner_link.h
launch/: experiment_demo_irl.launch  social_planner_sim.launch
maps/: hallway2_bld080.yaml
meshes/: canny.urdf.xacro
meshes/human/: standing.sdf
params/: global_costmap_params.yaml
scripts/: demonstration.py  experiment_demo_irl.py  irl.py  logging_helper.py  mdp.py  nav_map.py  path_discretizer.py  planner_node.py  reward_function.py  viz_helper.py
scripts/reward_components/: obstacle_reward.py  path_deviation_reward.py  reward_component.py  social_reward.py  step_reward.py
scripts/reward_components/reward_shapes/: gaussian_reward.py  quadratic_reward.py  reward_shape.py
src/: global_planner_link.cpp
