<?xml version="1.0"?>
<package format="2">
  <name>learning-nav-irl</name>
  <version>0.0.0</version>
  <description>
    Code for learning human-aware navigation from human demonstrations via
    maximum entropy inverse reinforcement learning.
  </description>
  <maintainer email="marinakollmitz@gmail.com">Marina Kollmitz</maintainer>
  <license>GPLv3</license>

  <author>Marina Kollmitz</author>
  <author>Torsten Koller</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
